tests/paczka1/small_fuzzy/37834847.err
Error in line 7: E2VFSWuV S9I3 15,1
Error in line 5: Z5vsyrp S792 95,5
Error in line 8: j6Fps4MkUVT S792 98,2
Error in line 10: Z5vsyrp A734 23,8
Error in line 15: E2VFSWuV S973 -1,4
Error in line 11: j6Fps4MkUVT A734 40,1
